tests/snapshots/run_wpt_conformance__coreml_gruCell_float32_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gru_cell.https.any.js gruCell float32 tensors with all options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: gruCell

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gruCellBias: f32[12];
    gruCellHiddenState: f32[3, 4];
    gruCellInput: f32[3, 2];
    gruCellRecurrentBias: f32[12];
    gruCellRecurrentWeight: f32[12, 4];
    gruCellWeight: f32[12, 2];
  }

  nodes {
    [gruCellOutput] = gruCell(gruCellInput, gruCellWeight, gruCellRecurrentWeight, gruCellHiddenState, gruCellBias, gruCellRecurrentBias, activations=["relu", "relu"], bias=0, label="", layout="zrn", recurrentBias=3, resetAfter=false);
  }

  outputs { gruCellOutput; }
}
