tests/snapshots/run_wpt_conformance__coreml_hardSigmoid_float16_negative_4D_tensor_specified_negative_options_alpha_default_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float16 negative 4D tensor specified negative options.alpha default options.beta",
    "coreml",
    "PASS",
)
